--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Super site</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellat
+      dolor illo dolore cum, consequatur esse repellendus aliquid expedita
+      adipisci est! In doloremque perspiciatis suscipit corporis alias quidem
+      laudantium dicta.</p>
   </body>
 </html>
