--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
       dolor illo dolore cum, consequatur esse repellendus aliquid expedita
       adipisci est! In doloremque perspiciatis suscipit corporis alias quidem
       laudantium dicta.</p>
+    <div>
+      <p>Bonjour</p>
+    </div>
   </body>
 </html>
